<package>
    <name>zed_cpu_ros</name>
    <version>0.1.0</version>
    <description>
      ZED camera driver for ROS which only uses the CPU
    </description>
    <author>Michael Grupp</author>
    <author>di.zeng@transcendrobotics.com</author>
    <maintainer email="di.zeng@transcendrobotics.com">Di Zeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <!-- <build_depend>eigen3</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>camera_info_manager</run_depend>
    <run_depend>yaml-cpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

    <export>
    </export>

</package>


